--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.2.0"
+    "redux-saga": "^0.14.8"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
